--- a/frontend/converters.html
+++ b/frontend/converters.html
@@ -538,14 +538,14 @@
             background: linear-gradient(135deg, #30cfd0 0%, #330867 100%);
         }
 
-        /* Category Navigation Cards - Professional Style */
+        /* Category Navigation Cards - Canva Style */
         .category-nav-section {
-            max-width: 1000px;
+            max-width: 1200px;
             margin: 0 auto 50px;
         }
         .category-nav-section .category-header {
             text-align: center;
-            margin-bottom: 40px;
+            margin-bottom: 35px;
         }
         .category-nav-section .category-header h2 {
             font-size: 1.8rem;
@@ -561,83 +561,46 @@
             color: #666;
         }
         .category-nav-grid {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 20px;
-            max-width: 750px;
+            display: flex;
+            justify-content: center;
+            gap: 30px;
+            flex-wrap: wrap;
+            max-width: 950px;
             margin: 0 auto;
         }
         .category-nav-card {
-            background: linear-gradient(145deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.85) 100%);
-            backdrop-filter: blur(30px);
-            border-radius: 14px;
-            padding: 20px 18px;
+            background: transparent;
+            border: none;
+            padding: 0;
             cursor: pointer;
-            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
-            border: 2px solid rgba(255, 255, 255, 0.8);
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.06), 0 1px 4px rgba(0, 0, 0, 0.04);
+            transition: all 0.3s ease;
             text-align: center;
             text-decoration: none;
             display: flex;
             flex-direction: column;
             align-items: center;
-            position: relative;
-            overflow: hidden;
-        }
-        .category-nav-card::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: linear-gradient(135deg, rgba(102, 126, 234, 0.08) 0%, rgba(118, 75, 162, 0.08) 100%);
-            opacity: 0;
-            transition: opacity 0.4s ease;
-            z-index: 0;
-        }
-        .category-nav-card:hover::before {
-            opacity: 1;
-        }
-        .category-nav-card::after {
-            content: '';
-            position: absolute;
-            top: -2px;
-            left: -2px;
-            right: -2px;
-            bottom: -2px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
-            border-radius: 14px;
-            opacity: 0;
-            z-index: -1;
-            transition: opacity 0.4s ease;
-        }
-        .category-nav-card:hover::after {
-            opacity: 0.8;
+            width: 120px;
         }
         .category-nav-card:hover {
-            transform: translateY(-6px) scale(1.03);
-            box-shadow: 0 12px 36px rgba(102, 126, 234, 0.2), 0 4px 12px rgba(0, 0, 0, 0.1);
-            border-color: transparent;
+            transform: translateY(-5px);
         }
         .category-nav-icon {
-            width: 55px;
-            height: 55px;
-            border-radius: 16px;
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            margin: 0 auto 14px;
-            font-size: 1.6rem;
+            margin: 0 auto 12px;
+            font-size: 2rem;
             color: white;
             position: relative;
-            z-index: 1;
-            transition: all 0.4s ease;
-            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.15);
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.12);
         }
         .category-nav-card:hover .category-nav-icon {
-            transform: scale(1.15) rotate(8deg);
-            box-shadow: 0 8px 28px rgba(0, 0, 0, 0.25);
+            transform: scale(1.08);
+            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.18);
         }
         .category-nav-card:nth-child(1) .category-nav-icon {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
@@ -658,42 +621,45 @@
             background: linear-gradient(135deg, #ff6b6b 0%, #ee5a6f 100%);
         }
         .category-nav-card h3 {
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             color: #1a1a1a;
-            margin-bottom: 6px;
-            font-weight: 700;
-            position: relative;
-            z-index: 1;
+            margin: 0;
+            font-weight: 600;
             letter-spacing: -0.2px;
         }
         .category-nav-card p {
-            color: #666;
-            font-size: 0.75rem;
-            line-height: 1.4;
-            position: relative;
-            z-index: 1;
-            font-weight: 400;
+            display: none;
         }
 
         /* Responsive for Category Nav */
         @media (max-width: 992px) {
             .category-nav-grid {
-                grid-template-columns: repeat(2, 1fr);
-                gap: 18px;
+                gap: 25px;
+            }
+            .category-nav-card {
+                width: 110px;
+            }
+            .category-nav-icon {
+                width: 70px;
+                height: 70px;
+                font-size: 1.8rem;
             }
         }
         @media (max-width: 576px) {
             .category-nav-grid {
-                grid-template-columns: 1fr;
-                gap: 15px;
+                gap: 20px;
             }
             .category-nav-card {
-                padding: 18px 16px;
+                width: 90px;
             }
             .category-nav-icon {
-                width: 50px;
-                height: 50px;
-                font-size: 1.4rem;
+                width: 65px;
+                height: 65px;
+                font-size: 1.6rem;
+                margin-bottom: 10px;
+            }
+            .category-nav-card h3 {
+                font-size: 0.8rem;
             }
         }
 
