Update format selector: Open converter in new window
- Changed convertFormats() function to use window.open() with '_blank'
- Convert button now opens converter page in new tab/window
- Keeps main converters page open for users to make multiple conversions
- Matches behavior of converter card links (target='_blank')

--- a/frontend/converters.html
+++ b/frontend/converters.html
@@ -1990,8 +1990,8 @@
                 // Create converter page URL
                 const converterUrl = fromFormat.toLowerCase() + '-to-' + toFormat.toLowerCase() + '.html';
                 
-                // Check if page exists, if not, show message
-                window.location.href = converterUrl;
+                // Open in new window/tab
+                window.open(converterUrl, '_blank');
             }
         }
 
