Add all 3FR converter cards to Image Converters section
- Added 12 new 3FR converter cards (3FR to PNG, PDF, TIFF, WEBP, BMP, GIF, ICO, AVIF, PSD, EPS, PS, ODD)
- Positioned after existing 3FR to JPG converter
- All converters now visible in the Image Converters category

--- a/frontend/converters.html
+++ b/frontend/converters.html
@@ -1201,6 +1201,90 @@
                         <h3>3FR to JPG</h3>
                         <p>Convert Hasselblad RAW 3FR to JPG format</p>
                     </a>
+                    <a href="3fr-to-png.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>3FR to PNG</h3>
+                        <p>Convert Hasselblad RAW 3FR to PNG format</p>
+                    </a>
+                    <a href="3fr-to-pdf.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>3FR to PDF</h3>
+                        <p>Convert Hasselblad RAW 3FR to PDF documents</p>
+                    </a>
+                    <a href="3fr-to-tiff.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>3FR to TIFF</h3>
+                        <p>Convert Hasselblad RAW 3FR to TIFF format</p>
+                    </a>
+                    <a href="3fr-to-webp.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>3FR to WEBP</h3>
+                        <p>Convert Hasselblad RAW 3FR to WEBP format</p>
+                    </a>
+                    <a href="3fr-to-bmp.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>3FR to BMP</h3>
+                        <p>Convert Hasselblad RAW 3FR to BMP format</p>
+                    </a>
+                    <a href="3fr-to-gif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>3FR to GIF</h3>
+                        <p>Convert Hasselblad RAW 3FR to GIF format</p>
+                    </a>
+                    <a href="3fr-to-ico.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>3FR to ICO</h3>
+                        <p>Convert Hasselblad RAW 3FR to ICO icon format</p>
+                    </a>
+                    <a href="3fr-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>3FR to AVIF</h3>
+                        <p>Convert Hasselblad RAW 3FR to AVIF format</p>
+                    </a>
+                    <a href="3fr-to-psd.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>3FR to PSD</h3>
+                        <p>Convert Hasselblad RAW 3FR to Photoshop PSD</p>
+                    </a>
+                    <a href="3fr-to-eps.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>3FR to EPS</h3>
+                        <p>Convert Hasselblad RAW 3FR to EPS vector</p>
+                    </a>
+                    <a href="3fr-to-ps.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>3FR to PS</h3>
+                        <p>Convert Hasselblad RAW 3FR to PostScript</p>
+                    </a>
+                    <a href="3fr-to-odd.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>3FR to ODD</h3>
+                        <p>Convert Hasselblad RAW 3FR to ODD document</p>
+                    </a>
                     <a href="dcr-to-jpg.html" class="converter-card" target="_blank">
                         <div class="converter-icon">
                             <i class="fas fa-camera"></i>
