Add ARW (Sony RAW) converter pages
- Created 11 new ARW converter pages (ARW to JPG and PNG already existed)
- Formats: PDF, AVIF, BMP, EPS, GIF, ICO, ODD, PS, PSD, TIFF, WEBP
- Added all 13 ARW converter cards to Image Converters section
- Includes drag-and-drop upload, AdSense slots, premium detection
- Matches existing converter design with glassmorphism style

--- a/frontend/converters.html
+++ b/frontend/converters.html
@@ -1262,6 +1262,90 @@
                         <h3>ARW to JPG</h3>
                         <p>Convert Sony RAW ARW photos to JPG format</p>
                     </a>
+                    <a href="arw-to-png.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ARW to PNG</h3>
+                        <p>Convert Sony RAW ARW to PNG format</p>
+                    </a>
+                    <a href="arw-to-pdf.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ARW to PDF</h3>
+                        <p>Convert Sony RAW ARW to PDF documents</p>
+                    </a>
+                    <a href="arw-to-tiff.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ARW to TIFF</h3>
+                        <p>Convert Sony RAW ARW to TIFF format</p>
+                    </a>
+                    <a href="arw-to-webp.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ARW to WEBP</h3>
+                        <p>Convert Sony RAW ARW to WEBP format</p>
+                    </a>
+                    <a href="arw-to-bmp.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ARW to BMP</h3>
+                        <p>Convert Sony RAW ARW to BMP format</p>
+                    </a>
+                    <a href="arw-to-gif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ARW to GIF</h3>
+                        <p>Convert Sony RAW ARW to GIF format</p>
+                    </a>
+                    <a href="arw-to-ico.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ARW to ICO</h3>
+                        <p>Convert Sony RAW ARW to ICO icon format</p>
+                    </a>
+                    <a href="arw-to-avif.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ARW to AVIF</h3>
+                        <p>Convert Sony RAW ARW to AVIF format</p>
+                    </a>
+                    <a href="arw-to-psd.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ARW to PSD</h3>
+                        <p>Convert Sony RAW ARW to Photoshop PSD</p>
+                    </a>
+                    <a href="arw-to-eps.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ARW to EPS</h3>
+                        <p>Convert Sony RAW ARW to EPS vector</p>
+                    </a>
+                    <a href="arw-to-ps.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ARW to PS</h3>
+                        <p>Convert Sony RAW ARW to PostScript</p>
+                    </a>
+                    <a href="arw-to-odd.html" class="converter-card" target="_blank">
+                        <div class="converter-icon">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                        <h3>ARW to ODD</h3>
+                        <p>Convert Sony RAW ARW to ODD document</p>
+                    </a>
                     <a href="dng-to-jpg.html" class="converter-card" target="_blank">
                         <div class="converter-icon">
                             <i class="fas fa-camera"></i>
